Got values from input and stored it in an Array

--- a/To-do-list.html
+++ b/To-do-list.html
@@ -7,7 +7,15 @@
 </head>
 <body>
 
-  <script></script>
+  <p>To-do-List</p>
+
+  <input class="js-name-input" placeholder="To do name">
+  <button onclick="
+    addTool();
+
+  ">Add</button>
+
+  <script src="./To-do-list.js"></script>
   
 </body>
 </html>
