--- a/To-do-list.html
+++ b/To-do-list.html
@@ -10,13 +10,15 @@
   <p>To-do-List</p>
 
   <input class="js-name-input" placeholder="To do name">
+
+  <input type="date" class="js-due-date-input">
   <button onclick="
     addTool();
 
   ">Add</button>
 
   <div class="js-todo-list">
-    
+
   </div>
   <script src="./To-do-list.js"></script>
   
