--- a/To-do-list.html
+++ b/To-do-list.html
@@ -4,20 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>To-do-list</title>
+  <link rel="stylesheet" href="./To-do-list.css">
 </head>
 <body>
 
   <p>To-do-List</p>
 
-  <input class="js-name-input" placeholder="To do name">
+  <div class="todo-input-grid">
+  <input class="js-name-input name-input-css" placeholder="To do name" >
 
-  <input type="date" class="js-due-date-input">
+  <input type="date" class="js-due-date-input due-date-input-css ">
   <button onclick="
     addTool();
+     " class="add-todo-button">Add</button>
+  </div>
 
-  ">Add</button>
-
-  <div class="js-todo-list">
+  <div class="js-todo-list todo-grid">
 
   </div>
   <script src="./To-do-list.js"></script>
